sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:3: error: ')' expected but ';' found.
                     for (i<-0 to (getValueCount()-1)) {test=false; v=getValue(i); for (j<-1 to i) if (getValue(i-j)>v) {setValue(i-j+1; getValue(i-j))} else {setValue(i-j+1, v)}
                                                                                                                                       ^AlgInsertionSort:3: error: ';' expected but ')' found.
                     for (i<-0 to (getValueCount()-1)) {test=false; v=getValue(i); for (j<-1 to i) if (getValue(i-j)>v) {setValue(i-j+1; getValue(i-j))} else {setValue(i-j+1, v)}
                                                                                                                                                      ^